# conan-lmdb

./: .appveyor.yml  .travis.yml  CMakeLists.txt  LICENSE  README.md  build.py  conanfile.py
.travis/: install.sh
